--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ flask-cors==6.0.0
 Flask-PyMongo==3.0.1
 Flask-SocketIO==5.5.1
 frozenlist==1.6.0
+greenlet==3.2.2
 h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
@@ -22,6 +23,7 @@ Jinja2==3.1.6
 mailgun==1.0.0
 MarkupSafe==3.0.2
 multidict==6.4.3
+packaging==25.0
 propcache==0.3.1
 PyJWT==2.10.1
 pymongo==4.13.0
