--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ mailgun==1.0.0
 MarkupSafe==3.0.2
 multidict==6.4.3
 packaging==25.0
+pika==1.3.2
 propcache==0.3.1
 PyJWT==2.10.1
 pymongo==4.13.0
